CONSONANTS — fix some letters v-align

--- a/css/atomic/typography.styl
+++ b/css/atomic/typography.styl
@@ -17,3 +17,9 @@
   text-decoration: none;
 }
 
+.c-yo-ying,
+.c-do-cha-da,
+.c-to-pa-tak,
+.c-tho-than {
+  transform: translateY(-15%);
+}
