--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -17,6 +17,7 @@
 }
 .letter-meaning {
   order: 1;
+  margin: 0;
 }
 .letter-meaning-thai {
   display: none;
@@ -45,7 +46,7 @@
     font-weight: 400;
     display: flex;
     flex-center();
-    line-height: .8;
+    line-height: 1;
   }
 
   &.is-vowel > .thai-letter {
